--- a/src/components/projects/featured/featuredProjects.module.css
+++ b/src/components/projects/featured/featuredProjects.module.css
@@ -125,6 +125,8 @@
   }
   .imgWrapper {
     width: 100%;
+    margin-right: 0;
+    margin-left: 0;
     flex: none;
   }
 
